added: service updateuser / modified: service, builder, openapi & controller
