# src/main/resources/openapi/yaml/clinic-openapi.yaml
@@ -111,6 +111,50 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+    put:
+      tags:
+        - user
+      summary: Update user
+      description: This can only be done by the logged in user.
+      operationId: updateUser
+      parameters:
+        - name: username
+          in: path
+          description: username register of database
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      requestBody:
+        description: Update an existent password the user.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserUpdateRequest'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/UserUpdateRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/UserUpdateRequest'
+        required: true
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
   /user/assign/{rol}/{username}:
     put:
       tags:
@@ -204,8 +248,8 @@ paths:
     get:
       tags:
         - role
-      summary: List all roles
-      description: Return list Roles
+      summary: List all rols
+      description: Return list Rols
       operationId: listRoles
       responses:
         "200":
@@ -231,10 +275,10 @@ paths:
       tags:
         - role
       summary: Crear rol necesarios
-      description: Add new Role
+      description: Add new Rol
       operationId: registerRole
       requestBody:
-        description: Body Role Request
+        description: Body Rol Request
         content:
           application/json:
             schema:
@@ -318,9 +362,6 @@ components:
         email:
           type: string
           example: edd.ckalb@gmail.com
-        code:
-          type: string
-          example: ABCD1234
     UserResponse:
       type: object
       properties:
@@ -349,6 +390,21 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/RolDetails'
+    UserUpdateRequest:
+      type: object
+      properties:
+        names:
+          type: string
+          example: Edward Andres
+        lastNames:
+          type: string
+          example: Cordova Chavez
+        email:
+          type: string
+          example: edd.ckalb@gmail.com
+        password:
+          type: string
+          example: '*****'
     RolDetails:
       type: object
       properties:
